--- a/personal_id.html
+++ b/personal_id.html
@@ -132,104 +132,31 @@
     <footer class="bg-dark">
       <div class="container-fluid">
         <div class="row bg-dark py-5 align-items-center">
-          <div class="col-12 col-md-6 d-flex text-light justify-content-center">
-            <ul class="footer-list">
-              <li class="title mt-3 mb-2">關於NET</li>
-              <li>
-                <a href="#" class="link-light link-underline-dark">品牌故事</a>
-              </li>
-              <li class="mt-1">
-                <a href="#" class="link-light link-underline-dark">門市據點</a>
-              </li>
-              <li class="mt-1">
-                <a
-                  href="#"
-                  class="link-light link-underline-dark"
-                  target="_blank"
-                  >人才招募</a
-                >
-              </li>
-            </ul>
-            <ul class="footer-list">
-              <li class="title mt-3 mb-2">購物須知</li>
-              <li>
-                <a href="#" class="link-light link-underline-dark">訂購流程</a>
-              </li>
-              <li class="mt-1">
-                <a href="#" class="link-light link-underline-dark"
-                  >十天鑑賞期</a
-                >
-              </li>
-              <li class="mt-1">
-                <a href="#" class="link-light link-underline-dark"
-                  >全台商品修改</a
-                >
-              </li>
-            </ul>
-            <ul class="footer-list">
-              <li class="title mt-3 mb-2">會員服務</li>
-              <li>
-                <a href="#" class="link-light link-underline-dark">會員中心</a>
-              </li>
-              <li class="mt-1">
-                <a href="#" class="link-light link-underline-dark">客服中心</a>
-              </li>
-            </ul>
-            <ul class="footer-list">
-              <li class="title mt-3 mb-2">聲明條款</li>
-              <li>
-                <a href="#" class="link-light link-underline-dark"
-                  >隱私權保護</a
-                >
-              </li>
-              <li class="mt-1">
-                <a href="#" class="link-light link-underline-dark">政令宣導</a>
-              </li>
-              <li class="mt-1">
-                <a href="#" class="link-light link-underline-dark">工作條款</a>
-              </li>
-            </ul>
+          <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
+            <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
           </div>
           <div class="col-12 col-md-6 d-flex mt-3">
             <div class="col-6 d-flex justify-content-end">
               <div class="subscribe">
                 <div class="title text-light">E-MAIL</div>
                 <div class="input-group mt-3 emailbox">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="輸入E-mail"
-                    aria-label="Recipient's username"
-                    aria-describedby="button-addon2"
-                  />
-                  <button
-                    class="btn btn-outline-secondary"
-                    type="button"
-                    id="button-addon2"
-                  >
-                    訂閱
-                  </button>
+                  <input type="text" class="form-control" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">訂閱</button>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <div class="followus">
-                <div class="title text-light text-center followus_title">
-                  FOLLOW US ON
-                </div>
+                <div class="title text-light text-center followus_title">FOLLOW US ON</div>
                 <div class="d-flex justify-content-center gap-3 mt-3">
                   <a href="#" title="facebook">
-                    <img src="img/social-media.png" class="fanpage-icon" />
+                    <img src="img/social-media.png" class="fanpage-icon">
                   </a>
                   <a href="#" title="Instagram">
-                    <img src="img/instagram.png" class="fanpage-icon" />
+                    <img src="img/instagram.png" class="fanpage-icon">
                   </a>
-                  <a
-                    href="#"
-                    title="Line"
-                    class="border border-2 border-black rounded"
-                  >
-                    <img src="img/line.png" class="line fanpage-icon" />
+                  <a href="#" title="Line" class="border border-2 border-black rounded">
+                    <img src="img/line.png" class="line fanpage-icon">
                   </a>
                 </div>
               </div>
@@ -240,9 +167,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            <p class="copyright text-light">
-              COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.
-            </p>
+            <p class="copyright text-light">COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.</p>
           </div>
         </div>
       </div>
