--- a/shopping_list.html
+++ b/shopping_list.html
@@ -74,7 +74,7 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="#" alt="logo" class="logo" />
+            <img src="img/hacker.png" alt="logo" class="logo" />
             <span class="logo-context fs-3 fw-bold">3C用品店 | 購物車</span>
           </a>
           <div class="tool-right me-4">
@@ -150,7 +150,7 @@
                             <input type="button" class="remove-button" value="-" prdkey="1742221577812001">
                         </label>
                         <label>
-                            <input type="text" class="goods-count" value="1">
+                            <input type="text" class="goods-count" value="1" readonly>
                         </label>
                         <label class="additive">
                             <input type="button" class="add-button" value="+" prdkey="1742221577812001">
