--- a/shopping_list_no_item.html
+++ b/shopping_list_no_item.html
@@ -39,7 +39,7 @@
       >
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="img/Adobe Express - file.png" alt="logo" class="logo" />
+            <img src="img/hacker.png" alt="logo" class="logo" />
             <span class="logo-context fs-3 fw-bold">3C用品店 | 購物車</span>
           </a>
           <div class="tool-right me-4">
