--- a/login.html
+++ b/login.html
@@ -19,21 +19,55 @@
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <!-- 網頁圖示 -->
     <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <script>
+      $(function() {
+        $("#login").validate({
+          submitHandler: function(form) {
+              alert("success!");
+              form.submit();
+          },
+          rules:{
+            account:{
+              required:true,
+              minlength:5,
+              maxlength:10
+            },
+            pwd:{
+                required:true,
+                minlength:6,
+                maxlength:12
+            }
+          },
+          messages: {
+            account: {
+                required:"帳號為必填欄位",
+                minlength:"帳號最少要5個字",
+                maxlength:"帳號最長10個字"
+            },
+            pwd:{
+                required:"密碼為必填欄位",
+                minlength:"密碼最少要6個字",
+                maxlength:"密碼最少要12個字"
+            }
+          }
+        });
+      });
+    </script>
 </head>
 <body>
   <!-- 導覽列 -->
   <header>
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
           <img src="img/hacker.png" alt="logo" class="logo">
-          <span class="logo-context fs-3 fw-bold">3C用品店</span>
+          <span class="logo-context fs-3 fw-bold">3C用品店|登入</span>
         </a>
         <div class="tool-right me-4">
-          <a href="#" alt="account">
+          <a href="personal_id.html" alt="account">
             <img src="img/user.png" class="icon pe-2">
           </a>
-          <a href="#" alt="shopping-cart">
+          <a href="shopping_list.html" alt="shopping-cart">
             <img src="img/shopping-cart.png" class="icon" >
           </a>
         </div>
@@ -46,14 +80,14 @@
         <div class="container p-3">
             <div class="row justify-content-center">
                 <div class="col-4 border border-2 p-5">
-                    <form action="#">
+                    <form action="#" id="login">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">會員信箱</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email會員信箱">
+                            <label for="exampleFormControlInput1" class="form-label">會員帳號</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" name="account" placeholder="Account會員帳號">
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">會員密碼</label>
-                            <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="*************">
+                            <input type="password" class="form-control" id="exampleFormControlInput1" name="pwd" placeholder="*************">
                         </div>
                         <button type="button" class="btn btn-dark w-100 mb-3">登入</button>
                     </form>
