--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
           rules:{
             account:{
               required:true,
-              minlength:6,
+              minlength:5,
               maxlength:10
             },
             pwd:{
@@ -49,7 +49,7 @@
           messages: {
             account: {
                 required:"帳號為必填欄位",
-                minlength:"帳號最少要6個字",
+                minlength:"帳號最少要5個字",
                 maxlength:"帳號最長10個字"
             },
             pwd:{
@@ -74,15 +74,15 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
           <img src="img/hacker.png" alt="logo" class="logo">
-          <span class="logo-context fs-3 fw-bold">3C用品店</span>
+          <span class="logo-context fs-3 fw-bold">3C用品店|註冊會員</span>
         </a>
         <div class="tool-right me-4">
-          <a href="#" alt="account">
+          <a href="personal_id.html" alt="account">
             <img src="img/user.png" class="icon pe-2">
           </a>
-          <a href="#" alt="shopping-cart">
+          <a href="shopping_list.html" alt="shopping-cart">
             <img src="img/shopping-cart.png" class="icon" >
           </a>
         </div>
@@ -101,7 +101,7 @@
                         <div class="mb-3">
                           <label for="exampleFormControlInput1" class="form-label">會員帳號</label>
                           <input type="text" class="form-control" id="exampleFormControlInput1" name="account" placeholder="帳號長度介於6-10">
-                      </div>
+                        </div>
                         <div class="mb-3">
                             <label for="pwd" class="form-label">會員密碼</label>
                             <input type="password" class="form-control" id="pwd" name="pwd" placeholder="密碼長度介於6-12">
@@ -113,7 +113,7 @@
                         <div class="mb-3">
                           <label for="exampleFormControlInput3" class="form-label">會員信箱</label>
                           <input type="email" class="form-control" id="exampleFormControlInput3" name="email" placeholder="Email會員信箱">
-                      </div>
+                        </div>
                         <button type="submit" class="btn btn-dark w-100 mb-3">註冊會員</button>
                       </form>
                     </div>
