--- a/shop.html
+++ b/shop.html
@@ -62,15 +62,15 @@
         class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black"
       >
         <div class="container-fluid">
-          <a class="navbar-brand d-flex align-items-center" href="#">
+          <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/hacker.png" alt="logo" class="logo" />
-            <span class="logo-context fs-3 fw-bold">3C用品店</span>
+            <span class="logo-context fs-3 fw-bold">3C用品店|商品頁面</span>
           </a>
           <div class="tool-right me-4">
-            <a href="#" alt="account">
+            <a href="personal_id.html" alt="account">
               <img src="img/user.png" class="icon pe-2" />
             </a>
-            <a href="#" alt="shopping-cart">
+            <a href="shopping_list.html" alt="shopping-cart">
               <img src="img/shopping-cart.png" class="icon" />
             </a>
           </div>
