--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <!-- 自定義CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- 自訂義script -->
+    <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <!-- 網頁圖示 -->
     <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <!-- 自訂義script -->
     <script>
       $(function () {
         $(window).scroll(function () {
