--- a/login.html
+++ b/login.html
@@ -14,11 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <!-- 自定義CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- 自訂義script -->
+    <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/localization/messages_zh_TW.js "></script>
     <!-- 網頁圖示 -->
     <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <!-- 自訂義script -->
     <script>
       $(function() {
         $("#login").validate({
@@ -82,14 +84,14 @@
                 <div class="col-4 border border-2 p-5">
                     <form action="#" id="login">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">會員帳號</label>
-                            <input type="text" class="form-control" id="exampleFormControlInput1" name="account" placeholder="Account會員帳號">
+                            <label for="account" class="form-label">會員帳號</label>
+                            <input type="text" class="form-control" id="account" name="account" placeholder="Account會員帳號">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">會員密碼</label>
-                            <input type="password" class="form-control" id="exampleFormControlInput1" name="pwd" placeholder="*************">
+                            <label for="pwd" class="form-label">會員密碼</label>
+                            <input type="password" class="form-control" id="pwd" name="pwd" placeholder="*************">
                         </div>
-                        <button type="button" class="btn btn-dark w-100 mb-3">登入</button>
+                        <button type="submit" class="btn btn-dark w-100 mb-3">登入</button>
                     </form>
                     <div class="d-flex justify-content-center">
                         <button type="button" class="btn">忘記密碼</button>
@@ -97,7 +99,8 @@
                 </div>
                 <div class="col-4 d-flex flex-column justify-content-center align-items-center border border-2 border-start-0 gap-3 p-5">
                     <span>首次購物，馬上加入會員!</span>
-                    <button type="button" class="btn btn-dark">註冊會員</button>
+                    <a href="register.html"><button type="button" class="btn btn-dark">註冊會員</button></a>
+                    
                 </div>
             </div>
         </div>
