--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/9bb96208a0.js" crossorigin="anonymous"></script>
     <!-- 自定義CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
@@ -73,8 +75,33 @@
         $(".page_e").click(function(){
           $(".page_").last().trigger("click");
         })
+        $("#subscribe").validate({
+          submitHandler: function(form) {
+              alert("success!");
+              form.submit();
+          },
+          rules:{
+            email:{
+              required:true,
+            }
+          },
+          messages: {
+            email: {
+                required:"信箱為必填欄位",
+            }
+          },
+          errorPlacement: function (error, element) {
+            $("#error-container").html(error);
+        }
+        });
       });
     </script>
+    <style>
+      .fa-brands{
+          color:#3f465a;
+          font-size:40px;
+      }
+    </style>
 </head>
 <body>
   <!-- 導覽列 -->
@@ -85,7 +112,13 @@
           <img src="img/hacker.png" alt="logo" class="logo">
           <span class="logo-context fs-3 fw-bold">3C用品店</span>
         </a>
-        <div class="tool-right me-4">
+        <nav aria-label="breadcrumb" class="ms-auto me-3">
+          <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"><a href="login.html" class="link-underline link-underline-opacity-0">登入</a></li>
+            <li class="breadcrumb-item"><a href="register.html" class="link-underline link-underline-opacity-0">註冊</a></li>
+          </ol>
+        </nav>
+        <div class="tool-right me-4 d-flex">
           <a href="personal_id.html" alt="account">
             <img src="img/user.png" class="icon pe-2">
           </a>
@@ -119,7 +152,7 @@
   </section>
   <!-- 商品 -->
   <section class="product">
-    <div class="container my-5 px-5">
+    <div class="container my-5">
       <div class="row">
         <div class="col-2 d-flex justify-content-end mt-5">
           <div class="list-group list-group-flush">
@@ -159,10 +192,10 @@
           <div class="row justify-content-center">
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/sonyWH-1000XM5.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <span class="fs-5">SONY WH-1000XM5 耳機</span>
+                  <h5 class="card-title">售價<span class="price">10,400</span>元</h5>
                   <div class="d-flex gap-3">
                     <button type="button" class="btn btn-danger">直接購買</button>
                     <button type="button" class="btn btn-primary">加入購物車</button>
@@ -175,6 +208,97 @@
                 <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">34,598</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/iphone16.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5">iPhone 16(128G/6.1吋)</span>
+                  <h5 class="card-title">售價<span class="price">28,299</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/iphone15pro.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5">iPhone 15 Pro(128G/6.1吋)</span>
+                  <h5 class="card-title">售價<span class="price">26,490</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/iphone15.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5">iPhone 15(128G/6.1吋)</span>
+                  <h5 class="card-title">售價<span class="price">22,999</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/ipadpro2.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5"> iPad Pro 第2代(11吋/256G)</span>
+                  <h5 class="card-title">售價<span class="price">17,800</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/ipadpro.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5">iPad Pro(128G/11吋)</span>
+                  <h5 class="card-title">售價<span class="price">35,890</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/ipadair.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5">iPad Air(128G/11吋)</span>
+                  <h5 class="card-title">售價<span class="price">18,690</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/ipad11.png" class="card-img-top"></a>
+                <div class="card-body">
+                  <span class="fs-5">iPad 11 (11吋/128G)</span>
                   <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
                   <div class="d-flex gap-3">
                     <button type="button" class="btn btn-danger">直接購買</button>
@@ -185,10 +309,10 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="#"><img src="img/xiaomi.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <span class="fs-5">Xiaomi 15 Ultra 5G 6.73吋</span>
+                  <h5 class="card-title">售價<span class="price">37,999</span>元</h5>
                   <div class="d-flex gap-3">
                     <button type="button" class="btn btn-danger">直接購買</button>
                     <button type="button" class="btn btn-primary">加入購物車</button>
@@ -198,10 +322,10 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="#"><img src="img/sony.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <span class="fs-5">Xperia 1 VI 5G 6.5吋</span>
+                  <h5 class="card-title">售價<span class="price">35,490</span>元</h5>
                   <div class="d-flex gap-3">
                     <button type="button" class="btn btn-danger">直接購買</button>
                     <button type="button" class="btn btn-primary">加入購物車</button>
@@ -211,10 +335,10 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="#"><img src="img/google_pixel.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <span class="fs-5">Google Pixel 9 5G 6.3吋</span>
+                  <h5 class="card-title">售價<span class="price">22,388</span>元</h5>
                   <div class="d-flex gap-3">
                     <button type="button" class="btn btn-danger">直接購買</button>
                     <button type="button" class="btn btn-primary">加入購物車</button>
@@ -222,97 +346,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
-                <div class="card-body">
-                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
-                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
-                  <div class="d-flex gap-3">
-                    <button type="button" class="btn btn-danger">直接購買</button>
-                    <button type="button" class="btn btn-primary">加入購物車</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            
           </div>
           <div class="row mt-4">
             <div class="col">
@@ -347,27 +381,28 @@
           <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
         </div>
         <div class="col-12 col-md-6 d-flex mt-3">
-          <div class="col-6 d-flex justify-content-end">
-            <div class="subscribe">
-              <div class="title text-light">E-MAIL</div>
-              <div class="input-group mt-3 emailbox">
-                <input type="text" class="form-control" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary" type="button" id="button-addon2">訂閱</button>
-              </div>
+          <div class="col-7 d-flex ms-3">
+            <div class="subscribe w-75 ms-auto">
+              <div class="text-light fs-5 mb-2">Email:</div>
+              <form action="" id="subscribe" class="d-flex">
+                <input type="email" class="form-control w-75" id="email" name="email" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">訂閱</button>
+              </form>
+              <span id="error-container"></span>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-5">
             <div class="followus">
               <div class="title text-light text-center followus_title">FOLLOW US ON</div>
               <div class="d-flex justify-content-center gap-3 mt-3">
                 <a href="#" title="facebook">
-                  <img src="img/social-media.png" class="fanpage-icon">
+                  <i class="fa-brands fa-square-facebook"></i>
                 </a>
                 <a href="#" title="Instagram">
-                  <img src="img/instagram.png" class="fanpage-icon">
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" title="Line" class="border border-2 border-black rounded">
-                  <img src="img/line.png" class="line fanpage-icon">
+                <a href="#"title="Line">
+                  <i class="fa-brands fa-line"></i>
                 </a>
               </div>
             </div>
