--- a/login.html
+++ b/login.html
@@ -11,7 +11,9 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">\
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/9bb96208a0.js" crossorigin="anonymous"></script>
     <!-- 自定義CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Jquery -->
@@ -55,6 +57,12 @@
         });
       });
     </script>
+    <style>
+      .fa-brands{
+          color:#3f465a;
+          font-size:40px;
+      }
+    </style>
 </head>
 <body>
   <!-- 導覽列 -->
@@ -128,13 +136,13 @@
               <div class="title text-light text-center followus_title">FOLLOW US ON</div>
               <div class="d-flex justify-content-center gap-3 mt-3">
                 <a href="#" title="facebook">
-                  <img src="img/social-media.png" class="fanpage-icon">
+                  <i class="fa-brands fa-square-facebook"></i>
                 </a>
                 <a href="#" title="Instagram">
-                  <img src="img/instagram.png" class="fanpage-icon">
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" title="Line" class="border border-2 border-black rounded">
-                  <img src="img/line.png" class="line fanpage-icon">
+                <a href="#"title="Line">
+                  <i class="fa-brands fa-line"></i>
                 </a>
               </div>
             </div>
