--- a/shop.html
+++ b/shop.html
@@ -16,10 +16,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/9bb96208a0.js" crossorigin="anonymous"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,13 +25,13 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <!-- 自定義CSS -->
-    <link rel="stylesheet" href="css/style.css" />
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <!-- 網頁圖示 -->
     <link rel="icon" type="image/x-icon" href="img/hacker.png" />
+    <!-- 自定義CSS -->
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!-- 自定義Script -->
     <script>
       $(function () {
@@ -53,8 +51,28 @@
           $(".item-color").removeClass("active");
           $(this).addClass("active");
         })
+        $(".rating i").hover(
+          function(){
+            $(this).prevAll().addBack().addClass("hovered");
+          },
+          function(){
+            $(".rating i").removeClass("hovered");
+        })
+        $(".rating i").click(function(){
+          $(".rating i").removeClass("selected");
+          $(this).prevAll().addBack().addClass("selected");
+        })
       });
     </script>
+    <style>
+      body .rating i.hovered, body .rating i.selected{
+        color: #ffd43b;
+      }
+      .fa-brands{
+         color:#3f465a;
+         font-size:40px;
+      }
+    </style>
   </head>
   <body>
     <!-- 導覽列 -->
@@ -83,7 +101,7 @@
       <div class="container">
         <div class="row pt-3">
           <div class="col-12 col-md-4">
-            <img src="img/11453217_R1.jpg" alt="" class="w-100 border border-3 border-black"/>
+            <img src="img/sonyWH-1000XM5.png" alt="" class="w-100 border border-3 border-black"/>
           </div>
           <div class="col-12 col-md-8">
             <h4 class="p-3">
@@ -213,22 +231,22 @@
             </table>
           </div>
           <div class="border border-2 mb-2 comment" style="display: none">
-            <div class="border-bottom border-2 my-2">
+            <div class="border-bottom border-2 my-2 rating">
               <span>商品評價:</span>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
             </div>
             <form action="" method="" class="mt-2 d-flex flex-column">
               <div class="d-flex align-items-center gap-2">
-                <span>名字:</span>
-                <textarea
-                  name="content"
-                  rows="5"
-                  cols="100"
-                  placeholder="留下你的評論"
-                ></textarea>
+                <span>客戶名字:</span>
+                <textarea name="content" rows="3" cols="100" placeholder="留下你的評論"></textarea>
                 <input type="submit" class="me-auto comment-submit mt-auto" />
               </div>
             </form>
-            <div class="d-flex flex-column border border-2 my-2 w-75">
+            <!-- <div class="d-flex flex-column border border-2 my-2 w-75">
               <div class="d-flex">
                 <div>名字:00000000</div>
                 <div class="ms-auto">日期:2025/03/23</div>
@@ -236,7 +254,7 @@
               <div class="mt-3">
                 <span> 評論:11111111 </span>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -281,17 +299,13 @@
                 </div>
                 <div class="d-flex justify-content-center gap-3 mt-3">
                   <a href="#" title="facebook">
-                    <img src="img/social-media.png" class="fanpage-icon" />
+                    <i class="fa-brands fa-square-facebook"></i>
                   </a>
                   <a href="#" title="Instagram">
-                    <img src="img/instagram.png" class="fanpage-icon" />
+                    <i class="fa-brands fa-instagram"></i>
                   </a>
-                  <a
-                    href="#"
-                    title="Line"
-                    class="border border-2 border-black rounded"
-                  >
-                    <img src="img/line.png" class="line fanpage-icon" />
+                  <a href="#"title="Line">
+                    <i class="fa-brands fa-line"></i>
                   </a>
                 </div>
               </div>
