--- a/shop.html
+++ b/shop.html
@@ -77,9 +77,7 @@
   <body>
     <!-- 導覽列 -->
     <header>
-      <nav
-        class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black"
-      >
+      <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/hacker.png" alt="logo" class="logo" />
@@ -112,13 +110,11 @@
               <li class="text-body-secondary">碳纖維驅動單體創造超凡音質</li>
               <li class="text-body-secondary">卓越的無噪音通話</li>
             </ul>
-            <p class="border-top border-bottom p-3">
-              售價<span class="price">11,900</span>元
-            </p>
+            <p class="border-top border-bottom p-3">售價<span class="price">11,900</span>元</p>
             <p>品牌名稱:SONY索尼</p>
             <div class="d-flex align-items-center">
               <p>顏色:</p>
-              <ul class="list-group list-group-horizontal text-center w-25 ms-2 pb-3">
+              <ul class="list-group list-group-horizontal text-center shop-color ms-2 pb-3">
                 <button type="button" class="list-group-item list-group-item-action item-color active" aria-current="true">
                   黑色
                 </button>
