--- a/homepage.html
+++ b/homepage.html
@@ -28,6 +28,39 @@
           font-size:40px;
       }
     </style>
+    <script>
+      $(function () {
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 200) {
+                $("#backToTop").css("display", "flex");
+            } else {
+                $("#backToTop").css("display", "none");
+            }
+        });
+        $("#backToTop").click(function () {
+            $("html").animate({ scrollTop: 0 });
+        });
+        $("#subscribe").validate({
+          submitHandler: function(form) {
+              alert("success!");
+              form.submit();
+          },
+          rules:{
+            email:{
+              required:true,
+            }
+          },
+          messages: {
+            email: {
+                required:"信箱為必填欄位",
+            }
+          },
+          errorPlacement: function (error, element) {
+            $("#error-container").html(error);
+        }
+        });
+      });
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary homepage-nav w-100">
