--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
                   <h5 class="card-title">售價<span class="price">34,598</span>元</h5>
@@ -218,7 +218,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone16.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/iphone16.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 16(128G/6.1吋)</span>
                   <h5 class="card-title">售價<span class="price">28,299</span>元</h5>
@@ -231,7 +231,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone15pro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/iphone15pro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 15 Pro(128G/6.1吋)</span>
                   <h5 class="card-title">售價<span class="price">26,490</span>元</h5>
@@ -244,7 +244,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/iphone15.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/iphone15.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 15(128G/6.1吋)</span>
                   <h5 class="card-title">售價<span class="price">22,999</span>元</h5>
@@ -257,7 +257,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/ipadpro2.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/ipadpro2.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5"> iPad Pro 第2代(11吋/256G)</span>
                   <h5 class="card-title">售價<span class="price">17,800</span>元</h5>
@@ -270,7 +270,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/ipadpro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/ipadpro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPad Pro(128G/11吋)</span>
                   <h5 class="card-title">售價<span class="price">35,890</span>元</h5>
@@ -283,7 +283,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/ipadair.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/ipadair.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPad Air(128G/11吋)</span>
                   <h5 class="card-title">售價<span class="price">18,690</span>元</h5>
@@ -296,7 +296,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/ipad11.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/ipad11.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPad 11 (11吋/128G)</span>
                   <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
@@ -309,7 +309,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/xiaomi.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/xiaomi.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">Xiaomi 15 Ultra 5G 6.73吋</span>
                   <h5 class="card-title">售價<span class="price">37,999</span>元</h5>
@@ -322,7 +322,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/sony.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/sony.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">Xperia 1 VI 5G 6.5吋</span>
                   <h5 class="card-title">售價<span class="price">35,490</span>元</h5>
@@ -335,7 +335,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/google_pixel.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="img/google_pixel.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">Google Pixel 9 5G 6.3吋</span>
                   <h5 class="card-title">售價<span class="price">22,388</span>元</h5>
