--- a/personal_id.html
+++ b/personal_id.html
@@ -1,176 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Information</title>
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- 自定義CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <!-- 導覽列 -->
-    <header>
-      <nav
-        class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black"
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="img/hacker.png" alt="logo" class="logo" />
-            <span class="logo-context fs-3 fw-bold">3C用品店 | 個人檔案</span>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Personal Information</title>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet" />
+  <!-- Validation -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+  <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
+  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/localization/messages_zh_TW.js "></script>
+  <!-- 自定義CSS -->
+  <link rel="stylesheet" href="css/style.css" />
+  <script>
+    $(document).ready(function($){
+      $("#form-personalID").validate({
+        submitHandler: function(form){
+          alert("個人資料已儲存!");
+          form.submit();
+        },
+        rules: {},
+        message: {
+          name: {
+            required: "姓名為必填欄位"
+          },
+          birth: {
+            pattern: "生日格式錯誤"
+          },
+          account:{
+            account: "帳號為必填欄位"
+          },
+          password:{
+            required: "密碼為必填欄位",
+            minlength: "密碼至少需6位"
+          },
+          phone_number:{
+            required: "電話為必填欄位",
+            pattern: "電話格式錯誤"
+          },
+          email:{
+            required: "電子郵件為必填欄位",
+            email: "電子郵件格式錯誤"
+          },
+          location:{
+            required: "地址為必填欄位"
+          }
+        }
+      })
+    });
+  </script>
+</head>
+
+<body>
+  <!-- 導覽列 -->
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="index.html">
+          <img src="img/hacker.png" alt="logo" class="logo" />
+          <span class="logo-context fs-3 fw-bold">3C用品店|個人資料</span>
+        </a>
+        <div class="tool-right me-4">
+          <a href="personal_id.html" alt="account">
+            <img src="img/user.png" class="icon pe-2" />
           </a>
-          <div class="tool-right me-4">
-            <a href="#" alt="account">
-              <img src="img/user.png" class="icon pe-2" />
-            </a>
-            <a href="#" alt="shopping-cart">
-              <img src="img/shopping-cart.png" class="icon" />
-            </a>
+          <a href="shopping_list.html" alt="shopping-cart">
+            <img src="img/shopping-cart.png" class="icon" />
+          </a>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- 個人檔案 -->
+  <div class="container px-5 py-5">
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col-8">
+        <h1>客戶基本資料</h1>
+        <form action="#" class="form-horizontal" id="form-personalID">
+          <div class="form-group py-2">
+            <label for="name" class="form-label">姓名</label>
+            <input type="text" name="name" class="form-control" placeholder="ex.王小明" required />
+          </div>
+          <div class="form-group py-2">
+            <label for="birth" class="form-label">出生</label>
+            <input type="text" name="birth" placeholder="xxxx-xx-xx" class="form-control" pattern="^((?:19[2-9]\d{1})|(?:20[01][09]))\-((?:0?[1-9])|(?:1[0-2]))\-((?:0?[1-9])|(?:[1-2][0-9])|30|31)$" />
+          </div>
+          <div class="form-group py-2">
+            <label for="account" class="form-label">帳號</label>
+            <input type="text" name="account" placeholder="Account" class="form-control" required/>
+          </div>
+          <div class="form-group py-2">
+            <label for="password" class="form-label">密碼</label>
+            <input type="password" name="password" placeholder="Password" class="form-control" minlength="6" required />
+          </div>
+          <div class="form-group py-2">
+            <label for="phone_number" class="form-label">電話</label>
+            <input type="text" name="phone_number" placeholder="09xx-xxxxxx" class="form-control" pattern="09[0-9]{2}-[0-9]{6}" required/>
+          </div>
+          <div class="form-group py-2">
+            <label for="email" class="form-label">電子郵件</label>
+            <input type="email" name="email" placeholder="example@gmail.com" class="form-control" required/>
+          </div>
+          <div class="form-group py-2">
+            <label for="location" class="form-label">地址</label>
+            <input type="text" name="location" class="form-control" required/>
+          </div>
+          <div class="form-group py-2">
+            <input type="submit" name="submit-personalID" class="btn btn-primary" value="儲存" />
+          </div>
+        </form>
+      </div>
+      <div class="col-2"></div>
+    </div>
+  </div>
+  <!-- 頁尾 -->
+  <footer class="bg-dark">
+    <div class="container-fluid">
+      <div class="row bg-dark py-5 align-items-center">
+        <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
+          <span
+            class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
+        </div>
+        <div class="col-12 col-md-6 d-flex mt-3">
+          <div class="col-6 d-flex justify-content-end">
+            <div class="subscribe">
+              <div class="title text-light">E-MAIL</div>
+              <div class="input-group mt-3 emailbox">
+                <input type="text" class="form-control" placeholder="輸入E-mail" aria-label="Recipient's username"
+                  aria-describedby="button-addon2" />
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2">
+                  訂閱
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="followus">
+              <div class="title text-light text-center followus_title">
+                FOLLOW US ON
+              </div>
+              <div class="d-flex justify-content-center gap-3 mt-3">
+                <a href="#" title="facebook">
+                  <img src="img/social-media.png" class="fanpage-icon" />
+                </a>
+                <a href="#" title="Instagram">
+                  <img src="img/instagram.png" class="fanpage-icon" />
+                </a>
+                <a href="#" title="Line" class="border border-2 border-black rounded">
+                  <img src="img/line.png" class="line fanpage-icon" />
+                </a>
+              </div>
+            </div>
           </div>
         </div>
-      </nav>
-    </header>
-
-    <!-- 個人檔案 -->
-    <div class="container px-5 py-5">
-      <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
-          <h1>客戶基本資料</h1>
-          <form action="#" class="form-horizontal">
-            <div class="form-group py-2">
-              <label for="name" class="form-label">姓名</label>
-              <input type="text" name="name" class="form-control" placeholder="ex.王小明" readonly />
-            </div>
-            <div class="form-group py-2">
-                <label for="birth" class="form-label">出生</label>
-                <input
-                  type="text"
-                  name="account"
-                  placeholder="xxxx-xx-xx"
-                  class="form-control"
-                  readonly
-                />
-              </div>
-            <div class="form-group py-2">
-              <label for="account" class="form-label">帳號</label>
-              <input
-                type="text"
-                name="account"
-                placeholder="Account"
-                class="form-control"
-                readonly
-              />
-            </div>
-            <div class="form-group py-2">
-              <label for="password" class="form-label">密碼</label>
-              <input
-                type="password"
-                name="password"
-                placeholder="Password"
-                class="form-control"
-                readonly
-              />
-            </div>
-            <div class="form-group py-2">
-                <label for="phone_number" class="form-label">電話</label>
-                <input
-                  type="text"
-                  name="phone_number"
-                  placeholder="09xx-xxxxxx"
-                  class="form-control"
-                  readonly
-                />
-            </div>
-            <div class="form-group py-2">
-                <label for="email" class="form-label">電子郵件</label>
-                <input
-                  type="text"
-                  name="email"
-                  placeholder="example@gmail.com"
-                  class="form-control"
-                  readonly
-                />
-            </div>
-            <div class="form-group py-2">
-                <label for="location" class="form-label">地址</label>
-                <input
-                  type="text"
-                  name="location"
-                  class="form-control"
-                  readonly
-                />
-            </div>
-          </form>
-        </div>
-        <div class="col-2"></div>
       </div>
     </div>
-    <!-- 頁尾 -->
-    <footer class="bg-dark">
-      <div class="container-fluid">
-        <div class="row bg-dark py-5 align-items-center">
-          <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
-            <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
-          </div>
-          <div class="col-12 col-md-6 d-flex mt-3">
-            <div class="col-6 d-flex justify-content-end">
-              <div class="subscribe">
-                <div class="title text-light">E-MAIL</div>
-                <div class="input-group mt-3 emailbox">
-                  <input type="text" class="form-control" placeholder="輸入E-mail" aria-label="Recipient's username" aria-describedby="button-addon2">
-                  <button class="btn btn-outline-secondary" type="button" id="button-addon2">訂閱</button>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="followus">
-                <div class="title text-light text-center followus_title">FOLLOW US ON</div>
-                <div class="d-flex justify-content-center gap-3 mt-3">
-                  <a href="#" title="facebook">
-                    <img src="img/social-media.png" class="fanpage-icon">
-                  </a>
-                  <a href="#" title="Instagram">
-                    <img src="img/instagram.png" class="fanpage-icon">
-                  </a>
-                  <a href="#" title="Line" class="border border-2 border-black rounded">
-                    <img src="img/line.png" class="line fanpage-icon">
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col">
+          <p class="copyright text-light">
+            COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.
+          </p>
         </div>
       </div>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <p class="copyright text-light">COPYRIGHT@3C用品店 CO.,LTD.ALL RIGHTS RESERVED.</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
