--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="d-flex flex-column justify-content-center align-items-center gap-3">
             <div class="welcome text-light fs-3 fw-bold">歡迎光臨3C用品店</div>
             <div class="welcome text-light fs-1 fw-bold">IT'S NICE TO MEET YOU</div>
-            <a href="index.html"><button type="button" class="btn btn-warning btn-lg text-light">前往購物</button></a>
+            <a href="goods.html"><button type="button" class="btn btn-warning btn-lg text-light">前往購物</button></a>
         </div>
     </header>
     <div class="d-flex flex-column my-5" id="service">
