--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
             // 登入成功，導向管理者後台
             window.location.href = "admin.html";
           } else if(account === "member" && password === "member123456") {
-            window.location.href = "index.html";
+            window.location.href = "goods.html";
           }
         });
       });
