--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <!-- 網頁圖示 -->
-    <link rel="icon" type="image/x-icon" href="img/hacker.png" />
+    <link rel="icon" type="image/x-icon" href="images/hacker.png" />
     <!-- 自定義CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <!-- 自定義Script -->
@@ -128,7 +128,7 @@
       <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="img/hacker.png" alt="logo" class="logo">
+            <img src="images/hacker.png" alt="logo" class="logo">
             <span class="logo-context fs-3 fw-bold">3C用品店|商品頁面</span>
           </a>
           <nav aria-label="breadcrumb" class="ms-auto me-3">
@@ -139,10 +139,10 @@
           </nav>
           <div class="tool-right me-4 d-flex">
             <a href="personal_id.html" alt="account">
-              <img src="img/user.png" class="icon pe-2">
+              <img src="images/user.png" class="icon pe-2">
             </a>
             <a href="shopping_list.html" alt="shopping-cart">
-              <img src="img/shopping-cart.png" class="icon" >
+              <img src="images/shopping-cart.png" class="icon" >
             </a>
           </div>
         </div>
@@ -153,7 +153,7 @@
       <div class="container">
         <div class="row pt-3">
           <div class="col-12 col-md-4">
-            <img src="img/sonyWH-1000XM5.png" alt="" class="w-100 border border-3 border-black"/>
+            <img src="images/sonyWH-1000XM5.png" alt="" class="w-100 border border-3 border-black"/>
           </div>
           <div class="col-12 col-md-8">
             <h4 class="p-3">
