--- a/admin.html
+++ b/admin.html
@@ -65,7 +65,7 @@
         <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/hacker.png" alt="logo" class="logo">
+                    <img src="images/hacker.png" alt="logo" class="logo">
                     <span class="logo-context fs-3 fw-bold">3C用品店|管理者介面</span>
                 </a>
                 <nav aria-label="breadcrumb" class="ms-auto me-3">
@@ -78,10 +78,10 @@
                 </nav>
                 <div class="tool-right me-4 d-flex">
                     <a href="personal_id.html" alt="account">
-                        <img src="img/user.png" class="icon pe-2">
+                        <img src="images/user.png" class="icon pe-2">
                     </a>
                     <a href="shopping_list.html" alt="shopping-cart">
-                        <img src="img/shopping-cart.png" class="icon">
+                        <img src="images/shopping-cart.png" class="icon">
                     </a>
                 </div>
             </div>
