--- a/goods.html
+++ b/goods.html
@@ -20,7 +20,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <!-- 網頁圖示 -->
-    <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <link rel="icon" type="image/x-icon" href="images/hacker.png">
     <!-- 自訂義script -->
     <script>
       $(function () {
@@ -109,7 +109,7 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="img/hacker.png" alt="logo" class="logo">
+          <img src="images/hacker.png" alt="logo" class="logo">
           <span class="logo-context fs-3 fw-bold">3C用品店</span>
         </a>
         <nav aria-label="breadcrumb" class="ms-auto me-3">
@@ -120,10 +120,10 @@
         </nav>
         <div class="tool-right me-4 d-flex">
           <a href="personal_id.html" alt="account">
-            <img src="img/user.png" class="icon pe-2">
+            <img src="images/user.png" class="icon pe-2">
           </a>
           <a href="shopping_list.html" alt="shopping-cart">
-            <img src="img/shopping-cart.png" class="icon" >
+            <img src="images/shopping-cart.png" class="icon" >
           </a>
         </div>
       </div>
@@ -139,13 +139,13 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/bt_2_095_01_e10.jpg" class="d-block carousel-img mx-auto">
+          <img src="images/bt_2_095_01_e10.jpg" class="d-block carousel-img mx-auto">
         </div>
         <div class="carousel-item">
-          <img src="img/bt_2_095_01_e6.png" class="d-block carousel-img mx-auto">
+          <img src="images/bt_2_095_01_e6.png" class="d-block carousel-img mx-auto">
         </div>
         <div class="carousel-item">
-          <img src="img/bt_2_095_02_e10.jpg" class="d-block carousel-img mx-auto">
+          <img src="images/bt_2_095_02_e10.jpg" class="d-block carousel-img mx-auto">
         </div>
       </div>
     </div>
@@ -192,7 +192,7 @@
           <div class="row justify-content-center">
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/sonyWH-1000XM5.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/sonyWH-1000XM5.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">SONY WH-1000XM5 耳機</span>
                   <h5 class="card-title">售價<span class="price">10,400</span>元</h5>
@@ -205,7 +205,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
                   <h5 class="card-title">售價<span class="price">34,598</span>元</h5>
@@ -218,7 +218,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/iphone16.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/iphone16.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 16(128G/6.1吋)</span>
                   <h5 class="card-title">售價<span class="price">28,299</span>元</h5>
@@ -231,7 +231,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/iphone15pro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/iphone15pro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 15 Pro(128G/6.1吋)</span>
                   <h5 class="card-title">售價<span class="price">26,490</span>元</h5>
@@ -244,7 +244,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/iphone15.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/iphone15.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPhone 15(128G/6.1吋)</span>
                   <h5 class="card-title">售價<span class="price">22,999</span>元</h5>
@@ -257,7 +257,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/ipadpro2.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/ipadpro2.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5"> iPad Pro 第2代(11吋/256G)</span>
                   <h5 class="card-title">售價<span class="price">17,800</span>元</h5>
@@ -270,7 +270,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/ipadpro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/ipadpro.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPad Pro(128G/11吋)</span>
                   <h5 class="card-title">售價<span class="price">35,890</span>元</h5>
@@ -283,7 +283,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/ipadair.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/ipadair.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPad Air(128G/11吋)</span>
                   <h5 class="card-title">售價<span class="price">18,690</span>元</h5>
@@ -296,7 +296,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/ipad11.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/ipad11.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">iPad 11 (11吋/128G)</span>
                   <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
@@ -309,7 +309,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/xiaomi.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/xiaomi.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">Xiaomi 15 Ultra 5G 6.73吋</span>
                   <h5 class="card-title">售價<span class="price">37,999</span>元</h5>
@@ -322,7 +322,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/sony.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/sony.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">Xperia 1 VI 5G 6.5吋</span>
                   <h5 class="card-title">售價<span class="price">35,490</span>元</h5>
@@ -335,7 +335,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/google_pixel.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/google_pixel.png" class="card-img-top"></a>
                 <div class="card-body">
                   <span class="fs-5">Google Pixel 9 5G 6.3吋</span>
                   <h5 class="card-title">售價<span class="price">22,388</span>元</h5>
