--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <!-- 網頁圖示 -->
-    <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <link rel="icon" type="image/x-icon" href="images/hacker.png">
     <!-- 自訂義script -->
     <style>
       .fa-brands{
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary homepage-nav w-100">
         <div class="container-fluid ">
             <a class="navbar-brand" href="index.html">
-                <img src="img/hacker.png" alt="logo" class="logo">
+                <img src="images/hacker.png" alt="logo" class="logo">
                 <span class="logo-context fs-3 fw-bold text-warning">3C用品店</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -118,19 +118,19 @@
         <div class="mx-auto fs-1 fw-bold my-5">PRODUCT</div>
         <div class="row d-flex mb-5 justify-content-center gap-5">
             <div class="col-12 col-md-4 card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/sonyWH-1000XM5.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/sonyWH-1000XM5.png" class="card-img-top"></a>
                 <div class="card-body text-center">
                   <h5 class="card-title fw-bold">Sony WH-1000XM5</h5>
                 </div>
             </div>
             <div class="col-12 col-md-4 card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/iphone16pro.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body text-center">
                   <h5 class="card-title fw-bold">IPHONE 16 PRO</h5>
                 </div>
             </div>
             <div class="col-12 col-md-4 card" style="width: 18rem;">
-                <a href="shop.html"><img src="img/ipadpro2.png" class="card-img-top"></a>
+                <a href="shop.html"><img src="images/ipadpro2.png" class="card-img-top"></a>
                 <div class="card-body text-center">
                   <h5 class="card-title fw-bold">IPAD PRO2</h5>
                 </div>
@@ -141,12 +141,12 @@
         <div class="mx-auto fs-1 fw-bold my-5">TEAM</div>
         <div class="row d-flex mb-5 justify-content-center gap-5">
             <div class="col-12 col-md-4 text-center">
-                <img src="img/profile_1.png" alt="">
+                <img src="images/profile_1.png" alt="">
                 <div class="fw-bold fs-2">Justin Hsieh</div>
                 <div class="fs-4">Designer</div>
             </div>
             <div class="col-12 col-md-4 text-center">
-                <img src="img/profile_2.png" alt="">
+                <img src="images/profile_2.png" alt="">
                 <div class="fw-bold fs-2">Sam Chen</div>
                 <div class="fs-4">Designer</div>
             </div>
