--- a/shopping_list.html
+++ b/shopping_list.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img src="img/hacker.png" alt="logo" class="logo" />
+          <img src="images/hacker.png" alt="logo" class="logo" />
           <span class="logo-context fs-3 fw-bold">3C用品店|購物網</span>
         </a>
         <nav aria-label="breadcrumb" class="ms-auto me-3">
@@ -42,10 +42,10 @@
         </nav>
         <div class="tool-right me-4 d-flex">
           <a href="personal_id.html" alt="account">
-            <img src="img/user.png" class="icon pe-2" />
+            <img src="images/user.png" class="icon pe-2" />
           </a>
           <a href="shopping_list.html" alt="shopping-cart">
-            <img src="img/shopping-cart.png" class="icon" />
+            <img src="images/shopping-cart.png" class="icon" />
           </a>
         </div>
       </div>
@@ -66,7 +66,7 @@
           <input type="checkbox" class="item-checkbox" checked />
         </div>
         <div class="col-auto">
-          <img src="img/xiaomi.png" alt="商品圖片" width="100" />
+          <img src="images/xiaomi.png" alt="商品圖片" width="100" />
         </div>
         <div class="col">
           <div class="fw-bold">Xiaomi 15 Ultra 5G (6.73吋/1TB)</div>
@@ -94,7 +94,7 @@
           <input type="checkbox" class="item-checkbox" checked />
         </div>
         <div class="col-auto">
-          <img src="img/Canon EF.png" alt="商品圖片" width="100" />
+          <img src="images/Canon EF.png" alt="商品圖片" width="100" />
         </div>
         <div class="col">
           <div class="fw-bold">Canon EF 35mm f/1.4 L II USM</div>
@@ -122,7 +122,7 @@
           <input type="checkbox" class="item-checkbox" checked />
         </div>
         <div class="col-auto">
-          <img src="img/DELL筆電.png" alt="商品圖片" width="100" />
+          <img src="images/DELL筆電.png" alt="商品圖片" width="100" />
         </div>
         <div class="col">
           <div class="fw-bold">DELL 14吋i5輕薄筆電</div>
